posiGen_FullsendBox/src/objects/Business_Process_Step__c.object
<CustomObject>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <referenceTo>Business_Process__c</referenceTo>
        <relationshipLabel>Business Process Steps</relationshipLabel>
        <relationshipName>Business_Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>How do I perform this step.  See attachments for further detail.</description>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <description>Step Number within the business process.</description>
        <label>Step Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Performed_By__c</fullName>
        <label>Step Performed By</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Business Process Steps</relationshipLabel>
        <relationshipName>Business_Process_Steps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Business Process Step</label>
    <nameField>
        <label>Business Process Steps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>